Added fonts and finished markup

--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,115 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gulp-template</title>
+  <link rel="stylesheet" href="css/style.min.css">
+  <title>Переходи на финансы с LEADS.SU</title>
 </head>
 
 <body>
   <header class="main-header">
     <div class="main-header__conainer">
-      <a class="main-header__logo-link" href="index.html">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam accusantium necessitatibus nam aut delectus
-        aliquid quasi. Nulla aliquam eaque exercitationem voluptatibus repellendus mollitia fuga ipsum, sit amet
-        expedita ullam dolores?
-      </a>
+      <a class="main-header__logo-link" href="index.html">Leads</a>
+      <a href="https://webmaster.leads.su/register?" class="main-header__sign-up">Регистрация</a>
     </div>
   </header>
+  <main class="main">
+    <section class="info">
+      <h1 class="info__title">Переходи на финансы с LEADS.SU</h1>
+      <ul class="advantages">
+        <li class="advantages__item">
+          <h2 class="advantages__item-title">Быстрые выплаты</h2>
+          <p class="advantages__item-text">Холд по топовым офферам от 5 дней, автоаппрув</p>
+        </li>
+        <li class="advantages__item">
+          <h2 class="advantages__item-title">Широкий выбор офферов</h2>
+          <p class="advantages__item-text">МФО, кредиты, карты, страхование, РКО, HR, бурж</p>
+        </li>
+        <li class="advantages__item">
+          <h2 class="advantages__item-title">Стабильность</h2>
+          <p class="advantages__item-text">Деньги нужны всегда, особенно в праздники</p>
+        </li>
+        <li class="advantages__item">
+          <h2 class="advantages__item-title">Актуальность</h2>
+          <p class="advantages__item-text">Невыгораемая ниша, ведь деньги нужны всем</p>
+        </li>
+      </ul>
+    </section>
+    <div class="slider">
+      <div class="swiper-pagination"></div>
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="card swiper-slide">
+            <ul class="terms">
+              <li class="terms__item">
+                <h3 class="terms__item-title">Рекламодатель:</h3>
+                <span class="terms__item-info">1XMoney</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">Тип трафика:</h3>
+                <span class="terms__item-info">любой</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">Выплата за анкету:</h3>
+                <span class="terms__item-info">120 р. <sup>+ ставки</sup></span>
+              </li>
+            </ul>
+            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
+          </div>
+          <div class="card swiper-slide">
+            <ul class="terms">
+              <li class="terms__item">
+                <h3 class="terms__item-title">Рекламодатель:</h3>
+                <span class="terms__item-info">Екапуста</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">Hold:</h3>
+                <span class="terms__item-info">5 дней</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">Выплата за анкету:</h3>
+                <span class="terms__item-info">2000 р.</span>
+              </li>
+            </ul>
+            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
+          </div>
+          <div class="card swiper-slide">
+            <ul class="terms">
+              <li class="terms__item">
+                <h3 class="terms__item-title">Рекламодатель:</h3>
+                <span class="terms__item-info">Tengo.ua</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">Hold:</h3>
+                <span class="terms__item-info">3 дня</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">Выплата за регу:</h3>
+                <span class="terms__item-info">72 ₴.</span>
+              </li>
+            </ul>
+            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
+          </div>
+          <div class="card swiper-slide">
+            <ul class="terms">
+              <li class="terms__item">
+                <h3 class="terms__item-title">Рекламодатель:</h3>
+                <span class="terms__item-info">Moneyman</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">EPC оффера:</h3>
+                <span class="terms__item-info">~55.7 р.</span>
+              </li>
+              <li class="terms__item">
+                <h3 class="terms__item-title">Выплата за выдачу:</h3>
+                <span class="terms__item-info">2880 р.</span>
+              </li>
+            </ul>
+            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
