--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,18 @@
 </head>
 
 <body>
+  <div class="page-container">
+    <div class="page-container__swiper swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide page-container__bg"></div>
+        <div class="swiper-slide page-container__bg"></div>
+        <div class="swiper-slide page-container__bg"></div>
+        <div class="swiper-slide page-container__bg"></div>
+      </div>
+    </div>
+  </div>
   <header class="main-header">
-    <div class="main-header__conainer">
+    <div class="main-header__container">
       <a class="main-header__logo-link" href="index.html">Leads</a>
       <a href="https://webmaster.leads.su/register?" class="main-header__sign-up">Регистрация</a>
     </div>
@@ -114,6 +124,7 @@
       </div>
     </div>
   </main>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
