styling in progress

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,6 @@
 </head>
 
 <body>
-  <div class="page-container">
-    <div class="page-container__swiper swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide page-container__bg"></div>
-        <div class="swiper-slide page-container__bg"></div>
-        <div class="swiper-slide page-container__bg"></div>
-        <div class="swiper-slide page-container__bg"></div>
-      </div>
-    </div>
-  </div>
   <header class="main-header">
     <div class="main-header__container">
       <a class="main-header__logo-link" href="index.html">Leads</a>
@@ -49,8 +39,8 @@
       </ul>
     </section>
     <div class="slider">
-      <div class="swiper-pagination"></div>
       <div class="swiper-container">
+        <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
           <div class="card swiper-slide">
             <ul class="terms">
@@ -64,7 +54,7 @@
               </li>
               <li class="terms__item">
                 <h3 class="terms__item-title">Выплата за анкету:</h3>
-                <span class="terms__item-info">120 р. <sup>+ ставки</sup></span>
+                <span class="terms__item-info terms__item-info--sup">120 р. <sup>+ ставки</sup></span>
               </li>
             </ul>
             <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
