--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,13 @@
   <title>Переходи на финансы с LEADS.SU</title>
 </head>
 
-<body>
+<body class="body-bg">
+  <div class="body-bg__container">
+    <div class="body-bg__bg body-bg__bg--active"></div>
+    <div class="body-bg__bg"></div>
+    <div class="body-bg__bg"></div>
+    <div class="body-bg__bg"></div>
+  </div>
   <header class="main-header">
     <div class="main-header__container">
       <a class="main-header__logo-link" href="index.html">Leads</a>
@@ -114,6 +120,7 @@
       </div>
     </div>
   </main>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
 
