added svg on bg and hover for links

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
       <div class="swiper-container">
         <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
-          <div class="card swiper-slide">
+          <div class="swiper-slide">
             <ul class="terms">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
@@ -63,9 +63,8 @@
                 <span class="terms__item-info terms__item-info--sup">120 р. <sup>+ ставки</sup></span>
               </li>
             </ul>
-            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
           </div>
-          <div class="card swiper-slide">
+          <div class="swiper-slide">
             <ul class="terms">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
@@ -80,9 +79,8 @@
                 <span class="terms__item-info">2000 р.</span>
               </li>
             </ul>
-            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
           </div>
-          <div class="card swiper-slide">
+          <div class="swiper-slide">
             <ul class="terms">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
@@ -97,9 +95,8 @@
                 <span class="terms__item-info">72 ₴.</span>
               </li>
             </ul>
-            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
           </div>
-          <div class="card swiper-slide">
+          <div class="swiper-slide">
             <ul class="terms">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
@@ -114,10 +111,10 @@
                 <span class="terms__item-info">2880 р.</span>
               </li>
             </ul>
-            <a href="https://webmaster.leads.su/register?" class="card__link">Подключить</a>
           </div>
         </div>
       </div>
+      <a href="https://webmaster.leads.su/register?" class="slider__link">Подключить</a>
     </div>
   </main>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
