done with desktop and mobile

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>Переходи на финансы с LEADS.SU</title>
 </head>
 
-<body class="body-bg">
+<body class="body-bg" style="color: white;">
   <div class="body-bg__container">
     <div class="body-bg__bg body-bg__bg--active"></div>
     <div class="body-bg__bg"></div>
@@ -49,7 +49,7 @@
         <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <ul class="terms">
+            <ul class="terms terms--white">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
                 <span class="terms__item-info">1XMoney</span>
@@ -65,7 +65,7 @@
             </ul>
           </div>
           <div class="swiper-slide">
-            <ul class="terms">
+            <ul class="terms terms--white">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
                 <span class="terms__item-info">Екапуста</span>
@@ -81,7 +81,7 @@
             </ul>
           </div>
           <div class="swiper-slide">
-            <ul class="terms">
+            <ul class="terms terms--black">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
                 <span class="terms__item-info">Tengo.ua</span>
@@ -97,7 +97,7 @@
             </ul>
           </div>
           <div class="swiper-slide">
-            <ul class="terms">
+            <ul class="terms terms--white">
               <li class="terms__item">
                 <h3 class="terms__item-title">Рекламодатель:</h3>
                 <span class="terms__item-info">Moneyman</span>
@@ -117,8 +117,7 @@
       <a href="https://webmaster.leads.su/register?" class="slider__link">Подключить</a>
     </div>
   </main>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/main.min.js"></script>
+  <script rel="preload" src="js/main.min.js"></script>
 </body>
 
 </html>
