added some comments

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <title>Переходи на финансы с LEADS.SU</title>
 </head>
 
+<!--Пришлось инлайново задать стиль для текста, чтобы обойти багу Chrome касательно срабатывания transition на загрузке страницы https://bugs.chromium.org/p/chromium/issues/detail?id=332189 -->
 <body class="body-bg" style="color: white;">
   <div class="body-bg__container">
     <div class="body-bg__bg body-bg__bg--active"></div>
